[package]
name = "kloudkernel"
version = "0.1.0"
authors = ["fred <fredlahde@gmail.com>"]

[dependencies]
bootloader_precompiled = "0.2.0"
spin = "0.4.6"
volatile = "0.2.3"
uart_16550 = "0.1.0"
x86_64 = "0.2.11"

[dev-dependencies]
array-init = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-kloudkernel.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
